[tool.poetry]
name = "ansi-art-gen"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ansi_art_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
